--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
+    "tailwind-types": "^3.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
